--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,10 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 
 /* My code */
 
-
+@font-face {
+    font-family: 'FivoSans';
+    src: url(/assets/webfontkit_FivoSans_Main/);
+}
 
 
 h1 {
@@ -17,79 +20,59 @@ h3 {
 
 /* Navigation */
 
-/* Nav Wrapper */
+/* menu Wrapper */
 .navWrapper {
     margin: 0 auto;
-    width: 70%;
+    width: 78%;
+    padding-bottom: 10%;
 }
 
-ul, .mainMenu  {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
+
+.topnav {
     overflow: hidden;
-}
-
-li, a {
-    display: inline-block;
+  }
+  
+  .topnav a {
+    float: left;
+    display: block;
+    color:  #2E2D2B;
+    text-align: center;
+    padding: 14px 16px;
     text-decoration: none;
-    color: #2E2D2B;
-}
+    font-size: 17px;
+  }
+  
+  .topnav a:hover {
+    font-weight: 900;
+  }
+  
+  .topnav a.active {
+    color: #ed7457;
+    font-weight: 900;
+  }
+  
+  .topnav .icon {
+    display: none;
+  }
 
-li, .menuItem {
-    padding: 20px 32px 20px 0;
-}
 
+  .menuItem, #CTA {
+      margin: 15px 0 0 0;
+  }
 
-li, #menuLogo {
-    margin: 0;
-    padding: 0 10px 0 0;
-}
+  #CTA  {
+      float: right;
+  }
 
-
-li a:hover {
-  font-weight: 900;
-}
 
 
 /* End Of Navigation */
 
 
-/* Rainbow Title Top*/
-
-.RainbowTitle_Top {
-    font-size: 200px;
-    font-size: 17vw;
-    font-weight: 900;
-    position: relative;
-    right: 150px;
-}
-
-.Dgreen {
-    color: #afd9c7;
-    position: absolute;
-    top: 218px;
-}
-
-.orangeTop {
-    color: #ed7457;
-    position: absolute;
-    top: 140px;
-}
-
-.Lgreen {
-    color: #3b5753;
-    position: absolute;
-    top: 60px;
-}
 
 
-.coverImage {
-    height: 592px;
-    background-image: url(/assets/imgs/vr_Headst.jpg);
-    background-position: right;
-    background-size: cover;
-}
+
+
 
 
 .ContentWrapper {
@@ -98,193 +81,217 @@ li a:hover {
 }
 
 
-#coverTitle {
-    position: relative;
-    top: 250px;
-    color: #f2f2f2;
+/* Main Content */
+
+#mainContent {
+    width: 60%;
 
 }
 
-
-.coverTitle, h2 {
-    font-size: 40px;
-    font-weight: 800;
-}
-
-.coverTitle, h3 {
+.sl_card {
+    margin: 30px;
+    line-height: 32px;
     font-size: 24px;
-    width: 300px;
-    padding-top: 30px;
 }
 
-
-
-
-
-/* Main Content*/
-
-
-
-
-/* Rainbow Title Bottom */
-
-.RainbowTitle_Bottmom {
-    position: relative;
-    left: 0;
-    top: -210px;
-    z-index: -1;
-    height: 550px;
-    background-image: url(/assets/imgs/Charrmello_Colour_Block.png);
-    background-position: right;
-    background-size: cover;
+.verticalLine {
+    width: 1px;
+    height: 350px;
+    background-color: #2E2D2B;
+    margin: 0 0 0 70px;
 }
 
+#Title {
+    color: #ed7457;
+    margin: 30px;
+    width: 400px;
 
-
-/* We */
-
-.WeSection {
-    height: 500px;
 }
 
-.weCards {
-    display: flex;
-    text-align: center;
-}
-
-.Card {
-    width: 200px;
-    margin: 30px 90px 0 0;
-}
-
-.Card h3 {
-    width: 200px;
-}
-
-.weImgs {
-    width: 200px;
-    height: 200px;
-    background-color: #f2f2f2;
-    border-radius: 15px;
-}
-
-
-        /* We Imgs */
-
-#Con_Img {
-    background-image: url(/assets/imgs/consult.jpg);
-    background-position: right;
-    background-size: cover;
-}
-
-#Cre_Img {
-    background-image: url(/assets/imgs/creative.jpg);
-    background-position: right;
-    background-size: cover;
-}
-
-#Wor_Img {
-    background-image: url(/assets/imgs/workshops.jpg);
-    background-position: right;
-    background-size: cover;
-}
-
-#Exp_Img {
-    background-image: url(/assets/imgs/alien.jpg);
-    background-position: right;
-    background-size: cover;
-}
-
-
-
-
-
-/* Services */
-
-.servicesSection {
-    height: 580px;
-    background-color: #afd9c7;
+#mainTitle {
+    font-size: 60px;
+    font-weight: 900;
+    line-height: 8vw;
     color:  #2E2D2B;
 }
 
-.servicesContnet {
-    padding: 140px 0 0 0;
-}
-
-
-.servicesList {
-    display: flex;
-}
-
-#subList {
-    width: 150px;
-    padding: 30px 190px 0 0;
-}
-
-
-
-/* Perfect For */
-
-.clientSection {
-    background-color: #f2f2f2;
-    height: 586px;
-}
-
-.clientContent {
-    padding: 110px 0 0 0;
-}
-
-
-.icons {
-    width: 150px;
-}
-
-.clientsCards {
-    display: flex;
-}
-
-.PerfImgs h3 {
-    width: 200px;
-    margin: 40px 90px 0 0;
-}
-
-
-
-#CORP_Img h3 {
-    width: 160px;
-    text-align: center;
-}
-
-#clientHeading {
-    color: #ed7457;
-    padding: 0 0 60px 0;
-}
-
-
-
-
-
-/* Why Section */
-
-
-.whySection {
+#mello {
+    font-size: 8vw;
     background-color: #ed7457;
-    color:  #f2f2f2;
-    height: 603px;
+    color: #f2f2f2;
+    padding: 0 10px 0 10px;
+    margin: 60px 0 0 0;
 }
 
-#whyText, h3, h1{
-    width: 800px;
+#subTitle {
+    padding: 10px 0 0 0;
 }
 
-#whyText {
-    padding: 140px 0 0 0;
 
-}
 
-#whyText, h1 {
-    padding-bottom: 30px;
-}
+
+
+
+
+
+/* Media Quiery  */
+
+@media screen and (max-width: 600px) {
+    .topnav a:not(:nth-child(5n)) {display: none;}
+    .topnav a.icon {
+      float: right;
+      display: block;
+    }
+  }
+  
+  @media screen and (max-width: 600px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+
+    .navWrapper {
+        margin: 0 auto;
+        width: 90%;
+        padding-bottom: 10%;
+    }
+    
+
+    .ContentWrapper {
+        margin: 0 auto;
+        width: 85%;
+    }  
+    
+    #mainContent {
+        width: 100%;
+    }
+
+    .sl_card {
+        margin: 30px;
+        line-height: 20px;
+        font-size: 18px;
+    }
+
+    .verticalLine {
+        width: 1px;
+        height: 250px;
+        background-color: #2E2D2B;
+        margin: 0 0 0 70px;
+    }
+
+
+
+
+    #Title {
+        color: #ed7457;
+        margin: 30px;
+        width: 400px;
+    
+    }
+    
+    #mainTitle {
+        font-size: 25px;
+        font-weight: 900;
+        line-height: 15vw;
+        color:  #2E2D2B;
+    }
+    
+    #mello {
+        font-size: 45px;
+        background-color: #ed7457;
+        color: #f2f2f2;
+        padding: 0 10px 0 10px;
+    }
+    
+    #subTitle {
+        padding: 10px 0 0 0;
+    }
+
+
+    
+    #CTA {
+        margin: 15px 0 0 30%;
+        float: left;
+    }
+    
+    #menuLogo {
+        display: none;
+    }
+    
+    .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+    
+
+    /* Contact */
+
+    .contactSection {
+        background-color: #2E2D2B;
+        color: #f2f2f2;
+        height: 700px !important;
+        overflow: hidden;
+    }
+    
+    #contactText {
+        padding: 55px 0 0 0 !important;
+        width: 100%;
+    }
+
+    #contactText h1 {
+        font-size: 18px !important;
+        line-height: 24px;
+    }
+    
+    
+    .contactDetails h3{
+        color: #ed7457;
+        font-weight: 300 !important;
+        font-size: 18px !important;
+        line-height: 24px;
+    }
+    
+    
+    #contactInfo {
+        
+        padding-bottom: 80px !important;
+        padding-top: 20px !important;
+        font-size: 18px !important;
+    }
+    
+    .contactCard h3 {
+        font-size: 18px !important;
+    }
+
+    .joinUs h3 {
+        font-size: 18px !important;
+    }
+
+    #footerLogo {
+        width: 90px !important;
+        float: right;
+    }
+
+    .footerSection {
+        height: 80px !important;
+        background-color: #f2f2f2;
+    }
+
+    #copyRight  p {
+        position: relative;
+        top: 80px !important;
+        font-size: 12px;
+    }
+  }
+/* End Of Main Content */
+
+
+
+
+
 
 
 
@@ -311,13 +318,15 @@ li a:hover {
 
 #contactInfo {
     display: flex;
-    padding-bottom: 150px;
-    padding-top: 40px;
+    flex-wrap: wrap;
+    align-content: space-between;
+    padding-bottom: 120px;
+    padding-top: 30px;
 }
 
 .contactCard h3 {
     width: 320px;
-    padding-right: 40px;
+    padding: 30px 0 0px 30px;
 }
 
 
@@ -340,4 +349,5 @@ li a:hover {
 #copyRight  p {
     position: relative;
     top: 110px;
+    font-size: 12px;
 }
