--- a/css/about.css
+++ b/css/about.css
@@ -2,9 +2,8 @@ html,body,div,span,applet,object,iframe,h1,h2,h3,h4,h5,h6,p,blockquote,pre,a,abb
 
 /* My code */
 body {
-  background-color: #161616;
+    background-color: #161616;
 }
-
 
 h1 {
     font-size: 40px;
@@ -33,7 +32,7 @@ h3 {
   .topnav a {
     float: left;
     display: block;
-    color:  #f2f2f2;
+    color:  #f2f2ff;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -75,65 +74,43 @@ h3 {
 
 .ContentWrapper {
     margin: 0 auto;
-    width: 60%;
+    width: 40%;
 }
 
 
 /* Main Content */
 
 #mainContent {
-    text-align: center;
+    width: 45%;
+    font-family: 'fivo_sanslight';
+    font-weight: lighter;
+    margin: 100px 0 0 0;
 }
 
 
 
-
-#mainLogo {
-  background-image: url(/assets/icons/W_logo.png);
-  width: 231px;
-  height: 231px;
-  background-repeat: no-repeat;
-  display: inline-block;
-  margin: 0;
-  padding: 0;
+.heading {
+    padding: 0 0 30px 0;
+    font-family: 'fivo_sansblack';
+    width: 800px;
+    color: #ed7457;
 }
 
 
-#name {
-  color: #ED7457;
-  font-size: 6vw;
-  font-family: 'fivo_sans_modernextra_black';
-  position: relative;
-  display: inline-block;
-}
-
-
-.elementAbout {
-  margin: 10px 0 0 0;
-  text-align: center;
-  
-}
-
-.elementAbout #summary {
-  display: inline-block;
-}
-
-
-#summary {
-  font-family: 'fivo_sanslight';
-  font-size: 20px;
-  color: #f2f2f2;
+.about {
+    padding: 0 0 25px 0;
+    font-size: 18px;
+    line-height: 18px;
+    color: #f2f2ff;
 }
 
 #email {
-  margin: 200px 0 0 0;
-  padding: 0 0 0 0;
-  font-family: 'fivo_sanslight';
-  font-size: 18px;
-  text-decoration: underline;
-  color: #f2f2f2;
-  font-weight: 600;
+    color: #f2f2ff;
+    padding: 180px 0 0 0;
+    text-decoration: underline;
 }
+
+
 
 
 
@@ -162,6 +139,11 @@ h3 {
       top: 0;
     }
 
+
+    body {
+        background-color: #ffffff;
+    }
+
     .navWrapper {
         margin: 0 auto;
         width: 90%;
@@ -171,60 +153,41 @@ h3 {
 
     .ContentWrapper {
         margin: 0 auto;
-        width: 85%;
+        width: 78%;
     }  
     
     #mainContent {
         width: 100%;
-        
-        text-align: center;
-    }
-
-
-    #mainLogo {
-        background-image: url(/assets/icons/B_logo.png) !important;
-        width: 180px;
-        height: 180px;
-        display: inline-block;
-        margin: 120px 0 0 0;
-    }
-
-
-    #name {
-        color: #ED7457;
-        font-size: 12vw;
-        font-family: 'fivo_sans_modernextra_black';
-        position: relative;
-        top: -20px;
-    }
-
-
-    .elementAbout {
-        margin: 200px 0 0 0;
-        height: 80%;
-        text-align: center;
-        
-    }
-
-    #summary {
-        width: 200px;
         font-family: 'fivo_sanslight';
-        font-weight: 16px;
+        font-weight: lighter;
+        margin: 200px 0 0 0;
     }
 
-    .elementAbout #summary {
-        display: inline-block;
+    .about {
+        padding: 0 0 25px 0;
+        font-size: 14px;
+        line-height: 18px;
     }
+
+    .heading {
+        display: none;
+    }
+
 
     #email {
-        margin: 20px 0 0 0;
+        margin: 215px 0 0 0;
         padding: 0 0 0 0;
         font-family: 'fivo_sanslight';
         font-size: 14px;
         text-decoration: underline;
+        text-align: center;
     }
 
 
+
+    .topnav {
+        color: #161616;
+    }
 
     
     #CTA {
