--- a/css/index.css
+++ b/css/index.css
@@ -176,7 +176,7 @@ h3 {
     
     #mainContent {
         width: 100%;
-        color: #f2f2f2;
+        color: #161616;
         text-align: center;
     }
     
