--- a/css/index.css
+++ b/css/index.css
@@ -211,7 +211,7 @@ h3 {
     }
 
     #summary {
-        width: 200px;
+        width: 220px;
         font-family: 'fivo_sanslight';
         font-weight: 16px;
         color: #161616;
@@ -246,6 +246,7 @@ h3 {
       float: none;
       display: block;
       text-align: left;
+      color: #161616;
     }
     
   }
