--- a/css/index.css
+++ b/css/index.css
@@ -38,6 +38,7 @@ h3 {
     padding: 14px 16px;
     text-decoration: none;
     font-size: 17px;
+    font-family: 'fivo_sanslight';
   }
   
   .topnav a:hover {
@@ -190,7 +191,7 @@ h3 {
         width: 180px;
         height: 180px;
         display: inline-block;
-        margin: 120px 0 0 0;
+        margin: 90px 0 0 0;
     }
 
 
@@ -247,6 +248,7 @@ h3 {
       display: block;
       text-align: left;
       color: #161616;
+      font-family: 'fivo_sanslight';
     }
     
   }
