--- a/css/about.css
+++ b/css/about.css
@@ -183,6 +183,7 @@ h3 {
         font-size: 14px;
         text-decoration: underline;
         text-align: center;
+        color: #161616;
     }
 
 
