--- a/css/index.css
+++ b/css/index.css
@@ -230,6 +230,12 @@ h3 {
         color: #161616;
     }
     
+    
+    #CTA {
+        margin: 15px 0 0 0;
+        float: left;
+    }
+    
     #menuLogo {
         display: none;
     }
